@@ -183,6 +183,8 @@ AC_DEFUN([AX_CHECK_POINTER_SIZE],
       POINTER_SIZE=64
    elif test "${IS_ARM_MACHINE}" = "yes" ; then
       POINTER_SIZE=32
+   elif test "${IS_ARM64_MACHINE}" = "yes" ; then
+      POINTER_SIZE=64
    elif test "${IS_SPARC64_MACHINE}" = "yes" ; then
       POINTER_SIZE=64
    else
