@@ -506,6 +506,17 @@ elif test "${IS_ARM_MACHINE}" = "yes" ; then
 	voidp_size=4
 	short_size=2
 	char_size=1
+elif test "${IS_ARM64_MACHINE}" = "yes" ; then
+	cross_compiling="yes"
+	long_long_size=8
+	long_size=8
+	int_size=4
+	pid_t_size=4
+	ssize_t_size=8
+	size_t_size=8
+	voidp_size=8
+	short_size=2
+	char_size=1
 elif test "${IS_SPARC64_MACHINE}" = "yes" ; then
 	cross_compiling="yes"
 	long_long_size=8
